flicker fix

--- a/style.css
+++ b/style.css
@@ -345,9 +345,6 @@ html{
 .sidebar-button:hover, .sidebar-button:focus{
     box-shadow: inset 20vw 0 0 0 rgba(11, 1, 48, 0.075);
 }
-.sidebar-button:hover, .sidebar-button:focus{
-    box-shadow: inset 20vw 0 0 0 rgba(0, 0, 0, 0.075);
-}
 @media only screen and (max-width: 1280px) {
     .main{
         width: 100vw;
